# nonebot-plugin-ACGalaxy

./: README.MD  pyproject.toml
nonebot-plugin-ACGalaxy/: __init__.py  acg.py  utils.py
nonebot-plugin-ACGalaxy/templates/: acg_list.html  acg_list_guest.html  acg_list_times.html
