[project]
name = "nonebot-plugin-ACGalaxy"
version = "0.8.2"
description = "Collect exhibition information for display and retrieval"
authors = [{ name = "shiran", email = "zxh08300@gmail.com" }]
dependencies = [
    "httpx<1.0.0,>=0.18.0",
    "nonebot2>=2.2.0",
    "nonebot-plugin-alconna>=0.38.0",
    "playwright>=1.36.0"
]
requires-python = ">=3.8,<4.0"
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/zouXH-god/nonebot-plugin-ACGalaxy"
"Bug Tracker" = "https://github.com/zouXH-god/nonebot-plugin-ACGalaxy/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"
defineConstant = { PYDANTIC_V2 = true }

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

[tool.pdm.build]
includes = []